fix: about alignment

--- a/public/styles.css
+++ b/public/styles.css
@@ -55,6 +55,8 @@ h2 > span,
   font-weight: normal;
   font-size: 32px;
   line-height: 140%;
+  padding: 0;
+  margin-top: 0px;
 }
 
 .label {
@@ -73,6 +75,7 @@ h3 > a {
   text-transform: uppercase;
   font-size: 16px;
   line-height: 180%;
+  margin-top: 0;
 }
 
 .greenCircle {
